tests/baselines/reference/withImportDecl.errors.txt
withImportDecl_1.ts(2,1): error TS18056: Declaration file contains synthesized file reference directives: '"withImportDecl_0.d.ts"'


==== withImportDecl_1.ts (1 errors) ====
    ///<reference path='withImportDecl_0.ts'/>
    var simpleVar;
    ~~~
!!! error TS18056: Declaration file contains synthesized file reference directives: '"withImportDecl_0.d.ts"'
    
    var anotherVar: any;
    var varWithSimpleType: number;
    var varWithArrayType: number[];
    
    var varWithInitialValue = 30;
    
    var withComplicatedValue = { x: 30, y: 70, desc: "position" };
    
    declare var declaredVar;
    declare var declareVar2
    
    declare var declaredVar;
    declare var deckareVarWithType: number;
    
    var arrayVar: string[] = ['a', 'b'];
    
    
    function simpleFunction() {
        return {
            x: "Hello",
            y: "word",
            n: 2
        };
    }
    
    module m1 {
        export function foo() {
            return "Hello";
        }
    }
    
    import m3 = require("withImportDecl_0");
    
    var b = new m3.A();
    b.foo;
==== withImportDecl_0.ts (0 errors) ====
    export class A { foo: string; }
    